CSSファイル作成及びHTMLに読み込み

--- a/sample.html
+++ b/sample.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>初めてのHTML</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    DMMWEBCAMP1日目！
-    
+    <p id="word-red">dannraku</p>
+    <a href="https://web-camp.io/" >DMMWEBCAMP1日目</a>
+
   </body>
 </html>
