--- a/1-2演習問題/test.html
+++ b/1-2演習問題/test.html
@@ -9,4 +9,10 @@
     <h2>webcamp</h2>
     <p>マンツーマンサポートによる学習で、確実にwebスキルを習得できるプログラミングスクールです。</p>
     <a href="https://web-camp.io/?utm_source=cpc-google&utm_medium=commit-unspecified-brand&utm_term=%2Bdmmwebcamp_b&gclid=Cj0KCQjw1a6EBhC0ARIsAOiTkrHAWz-HHHBLcCMAP10fpptWfCvlulQ1_cnjg3jk5lwQQbzEIVFUT2kaAvxkEALw_wcB#">webページ</a>
+    <h2>webcamp pro</h2>
+    <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
+    <a href="https://web-camp.io/pro/?utm_source=cpc-google&utm_medium=commit-tyo-osa-sitelink&utm_term=%2Bdmmwebcamp%20%E3%82%AA%E3%83%B3%E3%83%A9%E3%82%A4%E3%83%B3_b&gclid=Cj0KCQjw1a6EBhC0ARIsAOiTkrFZhZCFbPeLGXroNFdZl4DeZ1PKhjh1MhDkZa1Gs86063bPrxDBGA0aAs33EALw_wcB#">webページ</a>
+    <h2>webcamp woman</h2>
+    <p>家庭も仕事も頑張りたい主婦・ママ向けの、１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+    <a href="https://web-camp.io/skills/">webページ</a>
   </body>
