--- a/1-2演習問題/test.html
+++ b/1-2演習問題/test.html
@@ -15,4 +15,7 @@
     <h2>webcamp woman</h2>
     <p>家庭も仕事も頑張りたい主婦・ママ向けの、１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
     <a href="https://web-camp.io/skills/">webページ</a>
+    <h2>webcamp career</h2>
+    <p>3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート</p>
+    <a href="https://web-camp.io/commit/">webページ</a>
   </body>
