演習問題終了

--- a/1-2演習問題/test.html
+++ b/1-2演習問題/test.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>サービス紹介</title>
+    <link rel="stylesheet" href="text.css" />
   </head>
   <body>
     <h1>サービス紹介</h1>
